--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ extra:
   social:
     - icon: fontawesome/brands/github
 
+extra_css:
+  - assets/css/custom.css
+
 copyright: >
   <br>
   Copyright © 2022-2024 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.
