--- a/cpp/celeborn/protocol/CMakeLists.txt
+++ b/cpp/celeborn/protocol/CMakeLists.txt
@@ -17,7 +17,9 @@ add_library(
         STATIC
         PartitionLocation.cpp
         TransportMessage.cpp
-        ControlMessages.cpp)
+        ControlMessages.cpp
+        CompressionCodec.h
+        CompressionCodec.cpp)
 
 target_include_directories(protocol PUBLIC ${CMAKE_BINARY_DIR})
 
