--- a/cpp/celeborn/client/tests/CMakeLists.txt
+++ b/cpp/celeborn/client/tests/CMakeLists.txt
@@ -15,7 +15,8 @@
 
 add_executable(
         celeborn_client_test
-        WorkerPartitionReaderTest.cpp)
+        WorkerPartitionReaderTest.cpp
+        Lz4DecompressorTest.cpp)
 
 add_test(NAME celeborn_client_test COMMAND celeborn_client_test)
 
