--- a/cpp/celeborn/conf/CMakeLists.txt
+++ b/cpp/celeborn/conf/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(
 
 target_link_libraries(
         conf
+        protocol
         utils
         memory
         ${FOLLY_WITH_DEPENDENCIES}
