--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -107,6 +107,7 @@ jobs:
       matrix:
         module:
           - 'flink-2.0'
+          - 'flink-2.1'
     steps:
       - uses: actions/checkout@v4
       - name: Setup JDK 11
