--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -53,6 +53,7 @@ jobs:
           build/mvn spotless:check -Pgoogle-mirror,flink-1.19
           build/mvn spotless:check -Pgoogle-mirror,flink-1.20
           build/mvn spotless:check -Pgoogle-mirror,flink-2.0
+          build/mvn spotless:check -Pgoogle-mirror,flink-2.1
           build/mvn spotless:check -Pgoogle-mirror,spark-2.4
           build/mvn spotless:check -Pgoogle-mirror,spark-3.3
           build/mvn spotless:check -Pgoogle-mirror,mr
