--- a/cpp/celeborn/client/CMakeLists.txt
+++ b/cpp/celeborn/client/CMakeLists.txt
@@ -16,7 +16,9 @@ add_library(
         client
         reader/WorkerPartitionReader.cpp
         reader/CelebornInputStream.cpp
-        ShuffleClient.cpp)
+        ShuffleClient.cpp
+        compress/Decompressor.cpp
+        compress/Lz4Decompressor.cpp)
 
 target_include_directories(client PUBLIC ${CMAKE_BINARY_DIR})
 
@@ -31,6 +33,7 @@ target_link_libraries(
         ${FIZZ}
         ${LIBSODIUM_LIBRARY}
         ${FOLLY_WITH_DEPENDENCIES}
+        ${LZ4_WITH_DEPENDENCIES}
         ${GLOG}
         ${GFLAGS_LIBRARIES}
 )
