--- a/cpp/celeborn/client/CMakeLists.txt
+++ b/cpp/celeborn/client/CMakeLists.txt
@@ -19,7 +19,9 @@ add_library(
         ShuffleClient.cpp
         compress/Decompressor.cpp
         compress/Lz4Decompressor.cpp
-        compress/ZstdDecompressor.cpp)
+        compress/ZstdDecompressor.cpp
+        compress/Compressor.cpp
+        compress/Lz4Compressor.cpp)
 
 target_include_directories(client PUBLIC ${CMAKE_BINARY_DIR})
 
