--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -817,6 +817,10 @@ components:
         userIdentifier:
           type: string
           description: The user identifier of the application.
+        registrationTime:
+          type: integer
+          format: int64
+          description: The registration time of the application.
       required:
         - appId
         - userIdentifier
