[CELEBORN-2117] Use git submodules for Chart Actions
### What changes were proposed in this pull request?

### Why are the changes needed?

> The action helm/chart-testing-actionv2.6.1 is not allowed in apache/celeborn because all actions must be from a repository owned by your enterprise, created by GitHub, verified in the GitHub Marketplace

https://github.com/apache/celeborn/actions/runs/17004559972

---

Refer to this PR implementation

https://github.com/apache/ozone-helm-charts/pull/6

```bash
git submodule add --force https://github.com/helm/chart-testing-action .github/actions/chart-testing-action
git -C .github/actions/chart-testing-action checkout e6669bcd63d7cb57cb4380c33043eebe5d111992
```

### Does this PR introduce _any_ user-facing change?

### How was this patch tested?
https://github.com/apache/celeborn/actions/runs/17037324387/job/48292733845?pr=3431

Closes #3431 from cxzl25/chart-testing-action.

Authored-by: sychen <sychen@ctrip.com>
Signed-off-by: Shuang <lvshuang.xjs@alibaba-inc.com>
(cherry picked from commit a8f6de5cc6ec7f6148f1668e5252fa51b5740fe4)
Signed-off-by: Shuang <lvshuang.xjs@alibaba-inc.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+          submodules: recursive
       - uses: actions/setup-java@v4
         name: Setup JDK with Maven
         with:
@@ -54,7 +55,7 @@ jobs:
         with:
           version: v3.10.0
       - name: Setup chart-testing
-        uses: helm/chart-testing-action@v2.6.1
+        uses: ./.github/actions/chart-testing-action
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
