[CELEBORN-2115][CIP-14] Support PushData in cppClient

--- a/cpp/celeborn/protocol/tests/CMakeLists.txt
+++ b/cpp/celeborn/protocol/tests/CMakeLists.txt
@@ -17,7 +17,8 @@ add_executable(
         celeborn_protocol_test
         PartitionLocationTest.cpp
         TransportMessageTest.cpp
-        ControlMessagesTest.cpp)
+        ControlMessagesTest.cpp
+        EncodersTest.cpp)
 
 add_test(NAME celeborn_protocol_test COMMAND celeborn_protocol_test)
 
