[CELEBORN-2121] Support Zstd Compression in CppClient

--- a/cpp/celeborn/client/CMakeLists.txt
+++ b/cpp/celeborn/client/CMakeLists.txt
@@ -21,7 +21,8 @@ add_library(
         compress/Lz4Decompressor.cpp
         compress/ZstdDecompressor.cpp
         compress/Compressor.cpp
-        compress/Lz4Compressor.cpp)
+        compress/Lz4Compressor.cpp
+        compress/ZstdCompressor.cpp)
 
 target_include_directories(client PUBLIC ${CMAKE_BINARY_DIR})
 
