[CELEBORN-2132] Enhance ratis peer add operation to support clientAddress & adminAddress

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -1232,6 +1232,12 @@ components:
         address:
           type: string
           description: The address of the peer.
+        clientAddress:
+          type: string
+          description: The address of the peer for client RPC communication.
+        adminAddress:
+          type: string
+          description: The address of the peer for internal RPC communication.
       required:
         - id
         - address
