--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -327,6 +327,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationsHeartbeatResponse'
 
+  /api/v1/applications/info:
+    get:
+      tags:
+        - Application
+      operationId: getApplicationsInfo
+      description: List all running application's info of the cluster.
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApplicationInfoResponse'
+
   /api/v1/applications/delete_apps:
     post:
       tags:
@@ -790,6 +804,40 @@ components:
           description: The applications information.
           items:
             $ref: '#/components/schemas/ApplicationHeartbeatData'
+      required:
+        - applications
+
+
+    ApplicationInfo:
+      type: object
+      properties:
+        appId:
+          type: string
+          description: The id of the application.
+        userIdentifier:
+          type: string
+          description: The user identifier of the application.
+        extraInfo:
+          type: object
+          description: Extra information of the application.
+          additionalProperties:
+            type: string
+        registrationTime:
+          type: integer
+          format: int64
+          description: The registration time of the application.
+      required:
+        - appId
+        - userIdentifier
+
+    ApplicationInfoResponse:
+      type: object
+      properties:
+        applications:
+          type: array
+          description: The application information.
+          items:
+            $ref: '#/components/schemas/ApplicationInfo'
       required:
         - applications
 
