[CELEBORN-2202] add configmap checksum to the statefulset annotation

--- a/charts/celeborn/templates/master/statefulset.yaml
+++ b/charts/celeborn/templates/master/statefulset.yaml
@@ -37,10 +37,11 @@ spec:
       labels:
         {{- include "celeborn.master.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/tag: {{ .Values.image.tag | quote }}
-      {{- with .Values.master.annotations }}
       annotations:
+        celeborn.apache.org/conf-hash: {{ include "celeborn.configChecksum" . }}
+        {{- with .Values.master.annotations }}
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- end }}
     spec:
       {{- /* Add an init container to chown mount paths of Celeborn master volumes if necessary. */}}
       {{- $paths := list }}
@@ -178,4 +179,3 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       terminationGracePeriodSeconds: 30
-
