[CELEBORN-2206][CIP-14] Support PushDataCallback in CppClient

--- a/cpp/celeborn/client/CMakeLists.txt
+++ b/cpp/celeborn/client/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(
         writer/PushState.cpp
         writer/PushStrategy.cpp
         writer/ReviveManager.cpp
+        writer/PushDataCallback.cpp
         ShuffleClient.cpp
         compress/Decompressor.cpp
         compress/Lz4Decompressor.cpp
