[CELEBORN-2214] Add extraInitContainers for worker

--- a/charts/celeborn/templates/worker/statefulset.yaml
+++ b/charts/celeborn/templates/worker/statefulset.yaml
@@ -54,8 +54,13 @@ spec:
       {{- end }}
       {{- end }}
       {{- end }}
-      {{- if $paths }}
+      {{- if or .Values.worker.extraInitContainers $paths }}
       initContainers:
+      {{- end }}
+        {{- with .Values.worker.extraInitContainers }}
+        {{- toYaml . | nindent 6 }}
+        {{- end }}
+      {{- if $paths }}
       - name: chown-celeborn-worker-volume
         image: {{ include "celeborn.image" . }}
         {{- with .Values.image.pullPolicy }}
@@ -78,7 +83,7 @@ spec:
         {{- end }}
         securityContext:
           runAsUser: 0
-        {{- end }}
+      {{- end }}
       containers:
       - name: {{ .Chart.Name }}
         image: {{ include "celeborn.image" . }}
