add integration test for cpp-write java-read

--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -85,24 +85,31 @@ jobs:
           check-latest: false
       - name: Compile & Install Celeborn Java
         run: build/mvn clean install -DskipTests
-      - name: Run Java-Cpp Hybrid Integration Test
+      - name: Run Java-Write Cpp-Read Hybrid Integration Test (NONE Decompression)
         run: |
           build/mvn -pl worker \
             test-compile exec:java \
             -Dexec.classpathScope="test" \
             -Dexec.mainClass="org.apache.celeborn.service.deploy.cluster.JavaWriteCppReadTestWithNONE" \
             -Dexec.args="-XX:MaxDirectMemorySize=2G"
-      - name: Run Java-Cpp Hybrid Integration Test (LZ4 Decompression)
+      - name: Run Java-Write Cpp-Read Hybrid Integration Test (LZ4 Decompression)
         run: |
           build/mvn -pl worker \
             test-compile exec:java \
             -Dexec.classpathScope="test" \
             -Dexec.mainClass="org.apache.celeborn.service.deploy.cluster.JavaWriteCppReadTestWithLZ4" \
             -Dexec.args="-XX:MaxDirectMemorySize=2G"
-      - name: Run Java-Cpp Hybrid Integration Test (ZSTD Decompression)
+      - name: Run Java-Write Cpp-Read Hybrid Integration Test (ZSTD Decompression)
         run: |
           build/mvn -pl worker \
             test-compile exec:java \
             -Dexec.classpathScope="test" \
             -Dexec.mainClass="org.apache.celeborn.service.deploy.cluster.JavaWriteCppReadTestWithZSTD" \
+            -Dexec.args="-XX:MaxDirectMemorySize=2G"
+      - name: Run Cpp-Write Java-Read Hybrid Integration Test (NONE Compression)
+        run: |
+          build/mvn -pl worker \
+            test-compile exec:java \
+            -Dexec.classpathScope="test" \
+            -Dexec.mainClass="org.apache.celeborn.service.deploy.cluster.CppWriteJavaReadTestWithNONE" \
             -Dexec.args="-XX:MaxDirectMemorySize=2G"
