[CELEBORN-2239] Support Spark 4.1

--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -129,6 +129,7 @@ jobs:
       matrix:
         module:
           - 'spark-4.0'
+          - 'spark-4.1'
     steps:
       - uses: actions/checkout@v4
       - name: Setup JDK 17
