--- a/.github/workflows/sbt.yml
+++ b/.github/workflows/sbt.yml
@@ -203,6 +203,7 @@ jobs:
       matrix:
         spark:
           - '4.0'
+          - '4.1'
         java:
           - 17
         scala-binary:
@@ -212,6 +213,8 @@ jobs:
         include:
           - spark: '4.0'
             scala: '2.13.16'
+          - spark: '4.1'
+            scala: '2.13.17'
     steps:
       - uses: actions/checkout@v4
       - name: Setup JDK ${{ matrix.java }}
