[CELEBORN-2251] Introducing a shim layer and a common-tiered submodule for Flink clients

--- a/client-flink/common-tiered/pom.xml
+++ b/client-flink/common-tiered/pom.xml
@@ -26,7 +26,7 @@
 
   <artifactId>celeborn-client-flink-common-tiered_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
-  <name>Celeborn Client for Flink Common</name>
+  <name>Celeborn Client for Flink Common Tiered</name>
 
   <dependencies>
     <dependency>
