--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,8 @@
     <maven.plugin.silencer.version>1.7.19</maven.plugin.silencer.version>
     <maven.plugin.resources.version>3.3.1</maven.plugin.resources.version>
     <openapi.generator.version>7.8.0</openapi.generator.version>
+    <testcontainers-scala-minio.version>0.44.1</testcontainers-scala-minio.version>
+    <minio.version>8.6.0</minio.version>
 
     <!-- Allow modules to enable / disable certain build plugins easily. -->
     <testJarPhase>prepare-package</testJarPhase>
@@ -523,6 +525,19 @@
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <version>${jakarta.ws.rs-api.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.dimafeng</groupId>
+        <artifactId>testcontainers-scala-minio_3</artifactId>
+        <version>${testcontainers-scala-minio.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.minio</groupId>
+        <artifactId>minio</artifactId>
+        <version>${minio.version}</version>
+        <classifier>all</classifier>
       </dependency>
 
       <dependency>
