Simplify Test Containers Minio dependency

--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
     <maven.plugin.silencer.version>1.7.19</maven.plugin.silencer.version>
     <maven.plugin.resources.version>3.3.1</maven.plugin.resources.version>
     <openapi.generator.version>7.8.0</openapi.generator.version>
-    <testcontainers-scala-minio.version>0.44.1</testcontainers-scala-minio.version>
+    <testcontainers-minio.version>1.21.4</testcontainers-minio.version>
 
     <!-- Allow modules to enable / disable certain build plugins easily. -->
     <testJarPhase>prepare-package</testJarPhase>
@@ -527,9 +527,9 @@
       </dependency>
 
       <dependency>
-        <groupId>com.dimafeng</groupId>
-        <artifactId>testcontainers-scala-minio_3</artifactId>
-        <version>${testcontainers-scala-minio.version}</version>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>minio</artifactId>
+        <version>${testcontainers-minio.version}</version>
       </dependency>
 
       <dependency>
