CELEBORN-2256: Helm chart: add support for setting annotations on the service account (to support eks.amazonaws.com/role-arn)

--- a/charts/celeborn/tests/serviceaccount_test.yaml
+++ b/charts/celeborn/tests/serviceaccount_test.yaml
@@ -55,3 +55,17 @@ tests:
           kind: ServiceAccount
           name: test-service-account
           namespace: celeborn
+
+  - it: Should create service account with the specified annotations
+    set:
+      serviceAccount:
+        create: true
+        name: test-service-account
+        annotations:
+          eks.amazonaws.com/role-arn: arn:aws:iam::000000:role/Foo
+    asserts:
+      - equal:
+          path: metadata.annotations
+          value:
+            eks.amazonaws.com/role-arn: arn:aws:iam::000000:role/Foo
+        template: serviceaccount.yaml
