--- a/charts/celeborn/templates/serviceaccount.yaml
+++ b/charts/celeborn/templates/serviceaccount.yaml
@@ -23,5 +23,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.labels" . | nindent 4 }}
+  annotations:
+    {{- with .Values.serviceAccount.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
 
