[CELEBORN-2254] Fix support for S3 and add a simple integration test
### What changes were proposed in this pull request?

* Fix creating files to S3 (and other DFS)
* Add integration test for Spark and S3 (using Minio)
* in CI some job will run with the AWS profile because this way we can activate the new integration test (that needs the S3 client dependencies)

### Why are the changes needed?

See https://issues.apache.org/jira/browse/CELEBORN-2254.

### Does this PR resolve a correctness bug?

No

### Does this PR introduce _any_ user-facing change?

No

### How was this patch tested?

* I have added an integration test
* I have this patch on out internal fork, to make Celeborn run on k8s with S3

Closes #3592 from eolivelli/CELEBORN-2254-apache.

Authored-by: Enrico Olivelli <enrico@beast.io>
Signed-off-by: SteNicholas <programgeek@163.com>

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
     <maven.plugin.silencer.version>1.7.19</maven.plugin.silencer.version>
     <maven.plugin.resources.version>3.3.1</maven.plugin.resources.version>
     <openapi.generator.version>7.8.0</openapi.generator.version>
+    <testcontainers-minio.version>1.21.4</testcontainers-minio.version>
 
     <!-- Allow modules to enable / disable certain build plugins easily. -->
     <testJarPhase>prepare-package</testJarPhase>
@@ -523,6 +524,12 @@
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <version>${jakarta.ws.rs-api.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>minio</artifactId>
+        <version>${testcontainers-minio.version}</version>
       </dependency>
 
       <dependency>
