[CELEBORN-2259] The S3MultipartUploadHandler uses fs.s3a.aws.credentials.provider (#2)
(cherry picked from commit 5a41c834d9ef4c88f764dedbf86a6e95c2fd7a5d)

--- a/multipart-uploader/multipart-uploader-s3/pom.xml
+++ b/multipart-uploader/multipart-uploader-s3/pom.xml
@@ -50,6 +50,12 @@
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>${aws.version}</version>
     </dependency>
+    <!-- Needed for com.amazonaws.auth.WebIdentityTokenCredentialsProvider -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-sts</artifactId>
+      <version>${aws.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
